--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 :root {
-    --text-color: #DBE4EF;
+    --text-color: #1679f1;
     --card-front-color: hsla(180, 95%, 64%, 0.966);
     --card-back-color: #b6d430;
 }
